style About Me page and adjust the html

--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Yuko's Portfolio Site - About Me</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="name">Yuko Uda</div>
-        <nav>
-            <ul class="navigation">
-                <li><a href="./index.html">About</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header-contents">
+            <div class="name">Yuko Uda</div>
+            <nav>
+                <ul class="navigation">
+                    <li><a href="./index.html">About</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <div class="container">
         <h1>About Me</h1>
         <div class="about-contents">
-            <img src="assets/images/my-photo.jpg" alt="Photo of myself">
+            <img class="my-photo" src="assets/images/my-photo.jpg" alt="Photo of myself">
             <p>
                 I'm originally from Japan, and I moved to the U.S. to attend a university for learning film making.
                 At the time, my focus was 3D Visual Effects, and after graduating from the school, I started working as a 3D CG Artist.
+                <br>
                 After working in the entertainment industries for a couple years, I'd realised that it is not really a stable job. So I changed my career to Web Designer.
                 Since then, I have been working as a web designer and also after working for the company for several years, I learned javascript to do some front-end work as well.
                 In addition to that, I had some back-end training using Ruby as the primary language through the company.
+                <br>
                 Now my goal is to gain more experiences in the development part as a front-end / back-end developer and become more proficient with it.
             </p>
         </div>
