add footer to About Me page and style the footer

--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
             </p>
         </div>
     </div>
+    <footer class="footer">
+        Copyright © 2020 Yuko Uda
+    </footer>
 </body>
 </html>
