--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Yuko's Portfolio Site - The List of Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
+    <header class="header">
+        <div class="header-contents">
+            <div class="name">Yuko Uda</div>
+            <nav>
+                <ul class="navigation">
+                    <li><a href="./index.html">About</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="container">
+        <h1>Portfolio</h1>
+        <ul class="portfolio-contents">
+            <li>
+                <h2 class="portfolio-title">Animal</h2>
+                <img src="./assets/images/portfolio01.jpg" alt="portfolio01">
+            </li>
+            <li>
+                <h2 class="portfolio-title">Nature</h2>
+                <img src="./assets/images/portfolio02.jpg" alt="portfolio02">
+            </li>
+            <li>
+                <h2 class="portfolio-title">Abstract</h2>
+                <img src="./assets/images/portfolio03.jpg" alt="portfolio03">
+            </li>
+            <li>
+                <h2 class="portfolio-title">City</h2>
+                <img src="./assets/images/portfolio04.jpg" alt="portfolio04">
+            </li>
+            <li>
+                <h2 class="portfolio-title">Food</h2>
+                <img src="./assets/images/portfolio05.jpg" alt="portfolio05">
+            </li>
+        </ul>
+    </div>
+    <footer class="footer">
+        Copyright © 2020 Yuko Uda
+    </footer>
 </body>
 </html>
