style Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     </header>
     <div class="container">
         <h1>Portfolio</h1>
-        <ul class="portfolio-contents">
+        <ul class="portfolio-list">
             <li>
                 <h2 class="portfolio-title">Animal</h2>
                 <img src="./assets/images/portfolio01.jpg" alt="portfolio01">
