code html for Contact page

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Yuko's Portfolio Site - Contact</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
+    <header class="header">
+        <div class="header-contents">
+            <div class="name">Yuko Uda</div>
+            <nav>
+                <ul class="navigation">
+                    <li><a href="./index.html">About</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="container">
+        <h1>Contact</h1>
+        <form action="">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email">
+            <label for="message">Message</label>
+            <textarea name="message" id="message"></textarea>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    <footer class="footer">
+        Copyright © 2020 Yuko Uda
+    </footer>
 </body>
 </html>
