--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,20 @@
     </header>
     <div class="container">
         <h1>Contact</h1>
-        <form action="">
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name">
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email">
-            <label for="message">Message</label>
-            <textarea name="message" id="message"></textarea>
-            <input type="submit" value="Submit">
+        <form action="" class="contact-form">
+            <div class="contact-item">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" class="input-text">
+            </div>
+            <div class="contact-item">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="input-text">
+            </div>
+            <div class="contact-item">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" maxlength="500"></textarea>
+            </div>
+            <input type="submit" value="Submit" class="submit-btn">
         </form>
     </div>
     <footer class="footer">
