add links to the portfolio items and add hover effects for the portfolio items, nav texts, and form button

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,24 +24,34 @@
         <h1>Portfolio</h1>
         <ul class="portfolio-list">
             <li>
-                <h2 class="portfolio-title">Animal</h2>
-                <img src="./assets/images/portfolio01.jpg" alt="portfolio01">
+                <a href="#" target="_blank" rel="noopener" class="portfolio-link">
+                    <h2 class="portfolio-title">Animal</h2>
+                    <img src="./assets/images/portfolio01.jpg" alt="portfolio01">
+                </a>
             </li>
             <li>
-                <h2 class="portfolio-title">Nature</h2>
-                <img src="./assets/images/portfolio02.jpg" alt="portfolio02">
+                <a href="#" target="_blank" rel="noopener" class="portfolio-link">
+                    <h2 class="portfolio-title">Nature</h2>
+                    <img src="./assets/images/portfolio02.jpg" alt="portfolio02">
+                </a>
             </li>
             <li>
-                <h2 class="portfolio-title">Abstract</h2>
-                <img src="./assets/images/portfolio03.jpg" alt="portfolio03">
+                <a href="#" target="_blank" rel="noopener" class="portfolio-link">
+                    <h2 class="portfolio-title">Abstract</h2>
+                    <img src="./assets/images/portfolio03.jpg" alt="portfolio03">
+                </a>
             </li>
             <li>
-                <h2 class="portfolio-title">City</h2>
-                <img src="./assets/images/portfolio04.jpg" alt="portfolio04">
+                <a href="#" target="_blank" rel="noopener" class="portfolio-link">
+                    <h2 class="portfolio-title">City</h2>
+                    <img src="./assets/images/portfolio04.jpg" alt="portfolio04">
+                </a>
             </li>
             <li>
-                <h2 class="portfolio-title">Food</h2>
-                <img src="./assets/images/portfolio05.jpg" alt="portfolio05">
+                <a href="#" target="_blank" rel="noopener" class="portfolio-link">
+                    <h2 class="portfolio-title">Food</h2>
+                    <img src="./assets/images/portfolio05.jpg" alt="portfolio05">
+                </a>
             </li>
         </ul>
     </div>
