--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,8 @@
         </ul>
     </div>
     <footer class="footer">
-        Copyright © 2020 Yuko Uda
     </footer>
+
+    <script src="./assets/js/header-footer.js"></script>
 </body>
 </html>
