--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             <p>
                 I'm originally from Japan, and I moved to the U.S. to attend a university for learning film making.
                 At the time, my focus was 3D Visual Effects, and after graduating from the school, I started working as a 3D CG Artist.
-                <br>
+            </p>
+            <p>
                 After working in the entertainment industries for a couple years, I'd realised that it is not really a stable job. So I changed my career to Web Designer.
-                Since then, I have been working as a web designer and also after working for the company for several years, I learned javascript to do some front-end work as well.
+                Since then, I have been working as a web designer and also as working for the company for several years, I've learned javascript to do some front-end work as well.
                 In addition to that, I had some back-end training using Ruby as the primary language through the company.
-                <br>
+            </p>
+            <p>
                 Now my goal is to gain more experiences in the development part as a front-end / back-end developer and become more proficient with it.
             </p>
         </div>
